- util.js  -- relocating to the assets folder  -- cleaning up alignment/standard js linting  -- removing prioritize jquery plugin
- package.json
 -- removing utils from the standard js ignore

--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
   "standard": {
     "ignore": [
       "public/libs/**",
-      "out/**",
-      "public/util.js"
+      "out/**"
     ],
     "globals": [
       "angular",
